# hw08

./: ANSWER.md  CMakeLists.txt  README.md  kernel.cuh  main.cu  run.sh  score.txt
include/: CudaAllocator.h  ticktock.h
